# stm32c5_lettershell

./: .gitignore  CMakeLists.txt  build.bat  main.c
OpenSource/letter-shell-master/src/: shell_cfg.h
cmake/: components.cmake  flags.cmake
lettershell_adapt/: shell_port.c  shell_port.h
openocd/: stm32c562ret6-stlinkv3.cfg
tools/: serial_terminal.ps1
user_modifiable/_debug_GCC_STM32C562RET6/: RTE_Components.h
